Bug 442571 - kdeconnect-cli -a lists not paired devices
Summary: kdeconnect-cli -a lists not paired devices
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-17 01:55 UTC by Andrei
Modified: 2022-07-21 21:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei 2021-09-17 01:55:17 UTC
SUMMARY
kdeconnect-cli --help says:
-a, --list-available          List available (paired and reachable) devices

Instead, it also lists reachable not paired devices, see https://invent.kde.org/network/kdeconnect-kde/-/blob/master/cli/kdeconnect-cli.cpp#L91

STEPS TO REPRODUCE
1. Have 2 reachable devices, one paired and one not
2. kdeconnect-cli -a

OBSERVED RESULT
Both devices are shown

EXPECTED RESULT
Only reachable AND paired device should be shown

SOFTWARE/OS VERSIONS
Linux: Ubuntu 21.04, kernel 5.11.0-31-generic
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Comment 1 Adam Fontenot 2022-07-06 10:14:42 UTC
I encountered this as well, pretty easy to verify that this is what the code does. I'll try to submit a patch for this soon.
Comment 2 Bug Janitor Service 2022-07-06 10:58:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/479