Only show paired, reachable devices in CLI with -a

The help text indicates that the -a flag for
kdeconnect-cli is supposed to list available devices,
i.e. devices that are both paired and reachable.

Prior to this change, devices are only filtered on
reachability when the flag is passed.

BUG: 442571