cli/kdeconnect-cli.cpp
@@ -81,14 +81,14 @@ int main(int argc, char** argv)
     if (parser.isSet(QStringLiteral("my-id"))) {
         QTextStream(stdout) << iface.selfId() << endl;
     } else if (parser.isSet(QStringLiteral("l")) || parser.isSet(QStringLiteral("a"))) {
-        bool reachable = false;
+        bool available = false;
         if (parser.isSet(QStringLiteral("a"))) {
-            reachable = true;
+            available = true;
         } else {
             blockOnReply(iface.acquireDiscoveryMode(id));
             QThread::sleep(2);
         }
-        const QStringList devices = blockOnReply<QStringList>(iface.devices(reachable, false));
+        const QStringList devices = blockOnReply<QStringList>(iface.devices(available, available));
 
         bool displayCount = true;
         for (const QString& id : devices) {
